# DPAT-2026

./: .gitignore  CMakeLists.txt  Laboratory_Work_4_Data_Visualization.ipynb  README.md  Untitled.ipynb  app.py  preinstall.sh  run.sh
include/: CameraProvider.hpp  FaceDetector.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab2/: Untitled.ipynb  requirements.txt
src/: CameraProvider.cpp  FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
